Refactor conflict data handling and graph updates
Refactored coalition and conflict data management to improve consistency and efficiency, including changes to participant management, graph data trimming, and cache invalidation. Updated method signatures and usages for pushing changes, loading wars, and handling coalition sides. Removed unused classes, improved cache and graph update logic, and enhanced data integrity when modifying conflict time ranges or participants.